typescript/checker/tests/conformance/es6/templates/templateStringInInstanceOfES6.ts.stderr
error: InvalidLhsInInstanceOf {
    span: Span {
        lo: BytePos(
            24,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
    ty: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    24,
                ),
                hi: BytePos(
                    38,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
}
 --> $DIR/tests/conformance/es6/templates/templateStringInInstanceOfES6.ts:2:9
  |
2 | var x = `abc${ 0 }def` instanceof String;
  |         ^^^^^^^^^^^^^^

